--- a/style.css
+++ b/style.css
@@ -10,8 +10,10 @@ section{
     align-items: center;
     width: 100%;
     height: 100vh;
-    background: url(/12.png.jpg) no-repeat;
+    background: url(./12.png.jpg) no-repeat;
+    
 }
+
 .login-box{
     position: relative;
     width: 400px;
