--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ section{
     align-items: center;
     width: 100%;
     height: 100vh;
-    background: url(https://yandex-images.clstorage.net/5dTJC1214/4d268byjHMq/eQj5HWYyOpqooIVd6e-tWnhtoxhzPYvu2cvVhq2Du-SxGxdO-vkT7MqztVWnr9TACVXFdhugKraEdNzHYctmrvhbqgz396_POOcQX-ku7d0vPWdfZbycqElcwkI71HhxZFRZBjPxSbPGeGjJ-L-VlcnUVqSLM3Gt1evAnuBUu6d8STsQKKQ7Vagyjh8nKK5W5iihUSg8Ga1el4sMbJbirnAe3ES5eA17ijKoh7awkR0D1ZV5Aby0b0esTNLvXLDndY_wn67idJas90Jf6avvVa4tplgrvVltlV0Pg-Vebqh5UN-A-DGMvcbzIEjxdVtfhRdbtItzeC5BIglaYRY-4n1O_N0nqHmdqD1BWStkblfm7y7V5PlaYhaeSs3kHeqk8Z8ahjK_gzKBcCwNMD1YU42QHPNN8zpnTGgMEKIXf689gTtc5GX_2ac5xleo7KRaLydjGGO2lmfQlsgNp9zjJn4fmgK68Ia6g3Hvhnf72JAG0ZPySbJyaIFjQhOn1HMntYA3V2ql95nms0ZUJyigHahoatWq_dDlWxiLBm5XJ-m8npCIMLtKeYt64ov4ORkYA5BbM030MirP48leKh0wa_nHdR-jLTiQbbbNl2dkZxpqJCtUpn8aLRTcQ43jnWXn-tkTyzjxDT0LN-3LdrEXE0CUnPpFNnckSevDlisRv-47gXwVrqJ93ag5AlduYiafJW3on6b5UmWUVEdGrdusL_YZE0sw-U89ijYoB_H4WdzAl9l7ifh254Wlgd6o03Pisk91X6jrPVItMIGU5CQmGikkLhnuvFlsVBLMjmCVp6y-39uN_zCNeIIx6Ui5dRAVSJSUt4qy_2ZJYcraaZV2bPzGvZsoo7fSbzmGmOckJ93vLegXpr8XKB5eAAVsXumrORhXw_XwArwPs2KK-fmVV8KVlHwDODLizSWJlq2c_6IywHJS7Gkymeiyg5coaudfoaUoHKb-niQVXABPrc) no-repeat;
+    background: url(12.png.jpg) no-repeat;
     
 }
 
