--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ section{
     align-items: center;
     width: 100%;
     height: 100vh;
-    background: url(12.png.jpg) no-repeat;
+    background-image: url(12.png.jpg) no-repeat;
     
 }
 
