--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ section{
     align-items: center;
     width: 100%;
     height: 100vh;
-    background-image: url(12.png.jpg) no-repeat;
+    background: url(https://i.pinimg.com/originals/98/f3/86/98f386c1569bd593159f84ea604bfce8.jpg) no-repeat;
     
 }
 
